# c64-assembly-collection

./: .gitignore  .gitmodules  Cargo.toml  README.md  encode-resources.sh  mk.sh  rustfmt.toml  test
.github/workflows/: rust.yml
doc/: demo.md
src/: ahoy_art_deco.64c  autostart_header.asm  basic_header.asm  defines.asm  engine.asm  engine__commands_left.asm  engine__current_ptr.asm  engine__set_border_color.asm  engine_gen.asm  petscii_image.asm  rasterbar.asm  scrolling.asm  sprite-data-1.asm  sprite-duplication.asm  sprite.asm  standard-bitmap-256.asm  standard-bitmap.asm  standard-text-custom.asm  stripes.asm  test-autostart.asm  test-charset.asm  test-controller.asm  test-dummy.asm  test-load-charset.asm  test-load-program.asm  test-rasterbar.asm  test-sprite-duplication.asm  test-sprite.asm  test-standard-text.asm
src/builder/: Cargo.toml  main.rs
src/builder/src/: generated_application.rs  main.rs
src/builder/src/applications/: engine.rs  intro.rs  mod.rs  senimul.rs  set_black_border.rs
src/c64/: Cargo.toml  charset.rs  colors.rs  create_disk.rs  image_container.rs  image_container_test.rs  image_converter.rs  lib.rs  package.rs  palette.rs
src/c64-assembler/: Cargo.toml
src/c64-assembler-6502/: Cargo.toml
src/c64-assembler-6502/examples/: codegen_instruction_builder.rs  codegen_instruction_byte_code.rs  codegen_instruction_definitions.rs  codegen_instruction_test.rs  codegen_opcodes.rs  codegen_table.rs  generate_table.rs
src/c64-assembler-6502/src/: instruction.rs  isa.rs  lib.rs  opcodes.rs
src/c64-assembler-codegen/: Cargo.toml
src/c64-assembler-codegen/src/: lib.rs
src/c64-assembler-macro/: Cargo.toml
src/c64-assembler-macro/src/: lib.rs
src/c64-assembler-macro/tests/: instructions_tests.rs
src/c64-assembler/src/: lib.rs  test.rs
src/c64-assembler/src/builder/: application.rs  application_builder.rs  finalize.rs  function.rs  function_builder.rs  instruction.rs  instruction_builder.rs  mod.rs  module.rs  module_builder.rs
src/c64-assembler/src/generator/: dasm.rs  mod.rs  program.rs
src/c64-assembler/src/instruction/: mod.rs  operation.rs
src/c64-assembler/src/memory/: address_mode.rs  define.rs  label.rs  mod.rs  user_count.rs
src/c64-assembler/tests/: macro_application.rs  macro_instructions.rs
src/c64-charset/: Cargo.toml
src/c64-charset/src/: chars.rs  lib.rs
src/c64-colors/: Cargo.toml
src/c64-colors/src/: lib.rs
src/c64-dithering/: Cargo.toml
src/c64-dithering/tests/: bayer.rs
src/c64-encoder/: Cargo.toml
src/c64-encoder/src/: lib.rs
src/c64-encoder/src/builder/: demo.rs  frame.rs  mod.rs
src/c64-encoder/src/charmap/: encoding.rs
src/c64-encoder/src/command/: clear_screen_chars.rs  fill_video_memory.rs  mod.rs  partial_update_text_mode.rs  set_border_color.rs  set_palette4.rs  update_chars.rs  update_chars_ranged.rs  update_screen_chars_rle.rs  update_text_mode_screen.rs
src/c64-encoder/src/command/modules/: commands_left.rs  current_ptr.rs  decode_u16_char.rs  engine.rs  mod.rs  screen_char_ptr.rs
src/c64-encoder/src/encoder/: encoder_test.rs  mod.rs  utils.rs  writer.rs
src/c64-encoder/src/evaluator/: mod.rs  state.rs
src/c64-encoder/tests/: decode_screen_chars_rls.rs  decode_u16_char.rs
src/c64/dithering/: mod.rs  (+2 more)
src/convert/: Cargo.toml  main.rs
src/convert/src/: main.rs
src/encoder/: Cargo.toml  main.rs
src/tic80/: plasma.lua
(+36 files in other folders)
