[package]
name = "builder"
version = "0.1.0"
edition = "2021"

default-run="builder"

[dependencies]
cbm="0.1.0"
png="0.17.7"
clap={ version = "4.0.26", features = ["derive"] }
c64={ path = "../c64" }
c64-assembler-macro={path="../c64-assembler-macro"}
c64-assembler={path="../c64-assembler"}
c64-encoder={path="../c64-encoder"}
c64-colors={path="../c64-colors"}

[[bin]]
name="builder"
path="src/main.rs"



