[package]
name = "c64-assembler-codegen"
version = "0.1.0"
authors = ["Jeroen Bakker <jeroen@atmind.nl"]
description = "C64 assembler code gen (internal use)"
repository = "https://github.com/jeroenbakker-atmind/c64-assembly-collection"
license = "GPL-2.0-or-later"
keywords = ["retro", "c64", "6502"]
categories = ["compilers", "development-tools"]
edition = "2021"

[dependencies]
c64-assembler-6502 = {path="../c64-assembler-6502"}

[lib]
proc-macro = true
