[package]
name = "c64-assembler-macro"
version = "0.1.0"
authors = ["Jeroen Bakker <jeroen@atmind.nl"]
description = "Convenience macros for c64-assembler crate"
repository = "https://github.com/jeroenbakker-atmind/c64-assembly-collection"
licence = "GPL-2.0-or-later"
keywords = ["retro", "c64", "6502"]
categories = ["compilers", "development-tools"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
c64-assembler = {path="../c64-assembler"}
